--- a/RT/RT.vcxproj
+++ b/RT/RT.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittablelist.h" />
     <ClInclude Include="interval.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="sphere.h" />
     <ClInclude Include="utils.h" />
